[tool.poetry]
name = "date-calculator"
version = "1.0.0"
description = ""
authors = ["Edwin Erdmanis <edwin.erdmanis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.2"
yapf = "^0.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
